# Devops_projects

./: README.md  docker-compose.yml
app/: main.py
backend/: calculator.py  main.py  operations.py
frontend/: index.html  script.js  style.css
jenkins/: Jenkinsfile
k8s/: deployment.yaml  service.yaml
rag-genai-platform/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
rag-genai-platform/backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  embeddings.py  llm_service.py  main.py  models.py  pdf_service.py  rag_pipeline.py  schemas.py  vector_store.py
rag-genai-platform/backend/app/routes/: auth_routes.py  health_routes.py  rag_routes.py
rag-genai-platform/backend/app/utils/: logger.py  security.py
rag-genai-platform/backend/tests/: test_health.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
