[project]
name = "rag-genai-backend"
version = "1.0.0"
description = "FastAPI backend for an enterprise RAG Generative AI platform."
authors = [{ name = "RAG Platform Team", email = "engineering@example.com" }]
readme = "../README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic-settings==2.7.1",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "httpx==0.28.1",
    "pdfplumber==0.11.5",
    "faiss-cpu==1.9.0.post1",
    "numpy==2.1.3",
    "structlog==24.4.0",
    "email-validator==2.2.0",
]

[project.scripts]
rag-api = "uvicorn.main:main"

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.25.0"
pytest-cov = "6.0.0"
ruff = "0.8.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
